log
Sun, May  4, 2025 12:10:07 PM: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sun, May  4, 2025 12:14:57 PM: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
c90938f
Sun, May  4, 2025 12:28:37 PM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  10|6
total_score: 15/70
bb6ccb9
Sun, May  4, 2025 12:31:36 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
3235d48
Sun, May  4, 2025 12:32:33 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
bd5690e
Sun, May  4, 2025 12:34:09 PM: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
0dbf10d
Sun, May  4, 2025 12:44:03 PM: 
 treemap.c | 44 ++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 44 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:126:23: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
         int succKey = successor->pair->key;
                       ^~~~~~~~~
treemap.c:129:25: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         temp->pair->key = succKey;
                         ^
cc1.exe: all warnings being treated as errors
7b48f6a
Sun, May  4, 2025 12:45:42 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
17416cc
Sun, May  4, 2025 12:49:50 PM: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 40/70
5c6b97c
Sun, May  4, 2025  1:14:06 PM: 
 treemap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
345eb93
Sun, May  4, 2025  1:19:52 PM: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:179:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
             return temp;  // Si la clave es igual a la del nodo, retornamos el nodo
                    ^~~~
treemap.c:183:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return result;  // Retorna NULL si todas las claves son menores que la dada
            ^~~~~~
cc1.exe: all warnings being treated as errors
a3acd60
Sun, May  4, 2025  1:22:04 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
8c76586
Sun, May  4, 2025  1:24:17 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
bb2c56e
Sun, May  4, 2025  1:24:41 PM: 
 treemap.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  25|1
total_score: 60/70
c8b9427
Sun, May  4, 2025  1:28:11 PM: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
cfc26ea
Sun, May  4, 2025  1:29:13 PM: 
 treemap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  25|1
total_score: 60/70
80a84a7
Sun, May  4, 2025  1:30:05 PM: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  25|1
total_score: 60/70
0e838d5
Sun, May  4, 2025  1:35:33 PM: 
 treemap.c | 22 ++++------------------
 1 file changed, 4 insertions(+), 18 deletions(-)
 tests:  25|1
total_score: 60/70
f57458a
Sun, May  4, 2025  1:37:15 PM: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
1b0f0c4
Sun, May  4, 2025  1:37:38 PM: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  25|1
total_score: 60/70
5c1cd5c
